# xenon-lang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
Xenon/: Xenon.sln
Xenon/Interpreter/: CMakeLists.txt  Interpreter.cpp  Interpreter.h  Interpreter.vcxproj  Interpreter.vcxproj.filters
Xenon/Interpreter/Core/: CMakeLists.txt  Lua.hpp  LuaContext.cpp  LuaContext.hpp  lua_script.hpp
Xenon/Interpreter/Core/Engine/: LuaTNil.cpp  LuaTUserData.cpp
Xenon/Interpreter/Core/Include/: LuaContext.hpp  LuaCpp.hpp  LuaMetaObject.hpp  lua_script.hpp
Xenon/Interpreter/Core/Lua/: CMakeLists.txt
Xenon/Interpreter/Core/Registry/: LuaCodeSnippet.hpp  LuaLibrary.cpp  LuaLibrary.hpp
Xenon/Interpreter/src/libs/: CMakeLists.txt  Lib.cpp  Lib.h  StandartLib.cpp  StandartLib.h
Xenon/Interpreter/src/libs/include/: Lib.h  StandartLib.h
Xenon/Interpreter/src/libs/src/: StandartLib.cpp
Xenon/InterpreterTest/: InterpreterTest.vcxproj  InterpreterTest.vcxproj.filters
src/: CMakeLists.txt  main.cpp
src/core/: CmakeLists.txt
src/core/interpreter/: CMakeLists.txt
src/core/interpreter/include/: arg.h  interpreter.h
src/core/interpreter/sources/: arg.cpp  interpreter.cpp
src/core/lua/: CMakeLists.txt  lcode.c  lcode.h  llex.c  llex.h  lparser.c  lparser.h
src/core/standart/: CMakeLists.txt  xenonstd.cpp  xenonstd.h
src/core/standart/lib/: CMakeLists.txt  console.cpp  console.h  filesystem.cpp  filesystem.h  pointer.cpp  pointer.h  registry.cpp  registry.h  runtime.cpp  runtime.h  safe_pointer.cpp  safe_pointer.h  type.cpp  type.h  xdirectory.cpp  xdirectory.h  xerror.cpp  xerror.h  xfile.cpp  xfile.h  xstring.cpp  xstring.h
src/core/standart/lib/internal/: preprocessor.cpp  preprocessor.h  stack_helper.cpp  stack_helper.h  xerror.h  xerror.hpp
